# FastAPI-UV-Template

./: .env.example  .evn.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  setup.sh
.github/: copilot-instructions.md
app/: main.py
app/api/: health_route.py  ping_route.py  routes.py
app/api/v1/: router.py
app/core/: config.py  health.py  server.py
app/ml/: README.md
app/models/: README.md
